# rustymath

./: Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: rust.yml
src/: grammar.pest  lib.rs  main.rs  unit_converter.rs
tests/: test_math_eval.rs  test_unit_converter.rs
