[package]
name = "rustymath"
version = "0.1.0"
edition = "2021"
authors = ["Raunak Raj <bajrangcoders@gmail.com>"]
description = "A maths expression solver"
license = "Apache-2.0"
repository = "https://github.com/bajrangCoder/rustymath"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.6"
pest_derive = "2.6"
wasm-bindgen = "0.2.91"
